pkl-core/src/test/files/LanguageSnippetTests/output/errors/invalidBytes1.pcf
foo = Bytes(0, 1, 2, 3, 255)
